<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.fragment.authorizationUI.TransporterAuthFragment">

    <EditText
        android:id="@+id/nameEditTxtT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:focusable="true"
        />

    <EditText
        android:id="@+id/phoneEditTxtT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:focusable="true"
        />

    <EditText
        android:id="@+id/passwordEditTxtT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:focusable="true"
        />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/transportSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/transporterSignUpBtn"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/switchAuthModeT"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        />

</LinearLayout>