<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.authorizationUI.ProfileFragment"
    android:background="@color/background"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:src="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_mock"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/nameTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/name"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:padding="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_mock"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/phoneTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/phone"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:padding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transportLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transport_mock"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/transportTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/phone"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:padding="8dp"
            />
    </LinearLayout>

</LinearLayout>